--- a/daw/bdUno/bdUnoUno.html
+++ b/daw/bdUno/bdUnoUno.html
@@ -14,9 +14,11 @@
     <body class="apuntes">
         <header>
             <div class="navtop">
-
+                <span>Bases de Datos I</span>
+                <a href="../../index.html">Principal</a>
             </div>
         </header>
+        <!-- Tema 1 -->
         <section class="tema">
             <div class="tituloTema">
                 <a href=""></a>
@@ -27,17 +29,6 @@
                 <a href=""></a>
                 <h3>Título Apartado</h3>
             </article>
-        
-        <section class="tema">
-            <div class="tituloTema">
-                <a href=""></a>
-                <div class="numeroTema"></div>
-                <h2>Título Tema</h2>
-            </div>
-            <article class="articuloApuntes">
-                <a href=""></a>
-                <h3>Título Apartado</h3>
-            </article>
-        
+        </section>
     </body>
 </html>
